# rust-cef

./: Cargo.toml  Entitlements.plist  README.md  build.rs  bundle_app.sh  config.toml  ondebug.txt  package.sh  parse_test.rs  roadmap.md  setup_dev.sh
.github/workflows/: release-packaging.yml
crates/rust-cef-packager/: Cargo.toml
crates/rust-cef-packager/src/: lib.rs
crates/rust-cef-startup/: Cargo.toml
crates/rust-cef-startup/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
examples/: deferred_startup.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  PersistentCounter.tsx  ipc.ts  rust-api.ts  store.ts  types.ts
packaging/: README.md
src/: app.rs  assets.rs  config.rs  debug_logger.rs  error_reporting.rs  lib.rs  main.rs  menus.rs  security.rs  single_instance.rs  splash.rs  state.rs  tray.rs  updater.rs  window_manager.rs
src/backend/: server.rs
src/client/: client.rs  context_menu_handler.rs  display_handler.rs  download_handler.rs  lifespan_handler.rs  load_handler.rs  mod.rs  permission_handler.rs
src/ipc/: bridge.rs  handlers.rs  mod.rs  types.rs
src/ipc/commands/: browser.rs  clipboard.rs  dialog.rs  fs.rs  mod.rs  os.rs  updater.rs  window.rs
src/platform/: mod.rs  scheme_handler.rs
